# embeded

./: README.md  README.md~  workflow.txt
Cal/: Calculator.c  Calculator.c~  Calculator.h  Calculator.h~  CalculatorMain.c~  Dev.c  Dev.c~  Dev.h  Dev.h~  HisNum.c  HisNum.c~  HisOpen.c  HisOpen.c~  HisSave.c  HisSave.c~  History.h  History.h~  InfixCalculator.c  InfixCalculator.c~  InfixCalculator.h  InfixCalculator.h~  InfixToPostfix.c  InfixToPostfix.c~  InfixToPostfix.h  InfixToPostfix.h~  ListBaseStack.c  ListBaseStack.c~  ListBaseStack.h  ListBaseStack.h~  Main  Main.c  Main.c~  Makefile  Makefile.cp~  Makefile~  PostCalculator.c  PostCalculator.c~  PostCalculator.h  PostCalculator.h~  dev  (+4 more)
Cal_Device/bled/: led.c  led_test.c  led_test.cp
Cal_Device/btn/: Makefile  _btn.ko.cmd  _btn.o.cmd  _btn_test.mod.o.cmd  _built-in.o.cmd  btn.c  btn_test.c
Cal_Device/clcd/: _clcd.ko.cmd  clcd.c  clcd_test.c
Cal_Device/dot/: Makefile  _dot.ko.cmd  dot.c  dot_test.c
Cal_Device/fnd/: _fnd.ko.cmd  fnd.c  fnd_test.c
Cal_Device/key/: README  key.c  key_test.c
Calculator/: Calculator.sdf  Calculator.sln
Calculator/Calculator/: new.c  (+13 more)
IEB_Device/GTK_IEB_REV_APP/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dc_motor_test.c  dc_motor_test.h  dot_test.c  dot_test.h  fnd_test.c  fnd_test.h  ieb  main.c  main.h  st_motor_test.c  st_motor_test.h  support.c  support.h
IEB_Device/GTK_IEB_REV_APP/src/.deps/: callbacks.Po  dc_motor_test.Po  dot_test.Po  fnd_test.Po  interface.Po  led_test.Po  main.Po  st_motor_test.Po  support.Po
fpga_device/: gpio_btn.tgz
(+306 files in other folders)
